Fix #2
Remove incompatible display property from input-label class.

* Extra spaces on the end of lines were also removed.

--- a/public/views/style.css
+++ b/public/views/style.css
@@ -2,13 +2,13 @@
 div, a, p, ul, li, h1, h2, body {padding: 0; margin: 0; font-family: 'Open Sans', sans-serif}
 /*input {border: 0}*/
 a, .link-color {
-    text-decoration: inherit; 
+    text-decoration: inherit;
     cursor: pointer;
-    color: #ee1185; 
+    color: #ee1185;
     border: none;
 }
 a .dk, .link-color .dk {
-    
+
 }
 
 table {border-collapse: collapse;}
@@ -25,8 +25,8 @@ body .dark-colors {
     color: #f4f4f4;
 }
 
-span .dk { 
-    background-color: #343434 
+span .dk {
+    background-color: #343434
     color: #f4f4f4;
 }
 
@@ -91,8 +91,8 @@ h1, h2, .introP { text-align: center; }
     font-size: 16px;
 }
 
-.introP { 
-    margin-top: 10px; 
+.introP {
+    margin-top: 10px;
     font-size: 19px;
 }
 .smallerIntroP { font-size: 16px; }
@@ -202,7 +202,7 @@ thumbContainer .dark-colors {
 .comicRatingPSmall {display: none;}
 
 #imagesDiv {
-    display: flex;    
+    display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
@@ -265,7 +265,7 @@ thumbContainer .dark-colors {
 
 .modal-overlay {
     position: fixed;
-    width: 100%; 
+    width: 100%;
     height: 100%;
     visibility: hidden;
     top: 0; left: 0;
@@ -277,7 +277,7 @@ thumbContainer .dark-colors {
 }
 #modal-overlay {
     position: fixed;
-    width: 100%; 
+    width: 100%;
     height: 100%;
     visibility: hidden;
     top: 0; left: 0;
@@ -393,7 +393,6 @@ thumbContainer .dark-colors {
 .input-field:focus { outline: none; }
 
 .input-label {
-    display: inline-block;
     float: right;
     padding: 0 1em;
     width: 40%;
@@ -416,7 +415,7 @@ thumbContainer .dark-colors {
     font-size: 1.5em;
     padding: 10px 0 5px;
     pointer-events: none;
-    
+
 }
 .input-label-search {
     position: absolute;
@@ -438,7 +437,7 @@ thumbContainer .dark-colors {
     background-size: 100%;
     -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.7,0,0.3,1);
     transition: transform 0.4s cubic-bezier(0.7,0,0.3,1);
-}  
+}
 
 .input-label-nice::after {
     content: '';
@@ -536,7 +535,7 @@ thumbContainer .dark-colors {
     padding: 15px 40px;
     font-size: 15px;
     background: #343434;
-    color: #fff; 
+    color: #fff;
 }
 .input-button-faded:hover {
     cursor: pointer;
@@ -576,7 +575,7 @@ thumbContainer .dark-colors {
     background-color: #404040;
     text-align: center;
     flex-grow: 1;
-    padding-top: 10px; 
+    padding-top: 10px;
     padding-bottom: 10px;
 }
 
@@ -675,7 +674,7 @@ thumbContainer .dark-colors {
     .buttonContainingTable td {
         padding: 8px 5px;
     }
-    #modal-1 { 
+    #modal-1 {
         width: 90%;
     }
     .input-button-primary, .input-button-faded{
@@ -801,8 +800,8 @@ thumbContainer .dark-colors {
     border-collapse: collapse;
     margin: auto;
 }
-.admin-table td, th { 
-    border: 1px solid #ccc; 
+.admin-table td, th {
+    border: 1px solid #ccc;
     padding: 5px 10px;
 }
 nvd3 {
